--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "geckos.js"
   ],
   "dependencies": {
+    "body-parser": "^1.15.1",
     "chai": ">=3.5",
     "express": ">1.0",
     "jslint": "*",
