--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "less": "lessc ./public/css/*.less ./public/css/styles.css",
     "watch": "npm-watch",
     "test": "mocha",
-    "jslint": "jslint *.js"
+    "jshint": "jshint *.js"
   },
   "files": [
     "geckos.js"
@@ -25,7 +25,6 @@
     "body-parser": "^1.15.1",
     "chai": ">=3.5",
     "express": ">1.0",
-    "jslint": "*",
     "mongoose": "^4.5.0",
     "npm-watch": ">=0.0"
   }
