--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": ">=3.5",
     "express": ">1.0",
     "mongoose": "^4.5.0",
+    "ng-dialog": "^0.6.2",
     "npm-watch": ">=0.0"
   }
 }
