--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "less": "lessc ./public/css/*.less ./public/css/styles.css",
+    "less": "lessc ./public/assets/css/styles.less ./public/assets/css/styles.css",
     "watch": "npm-watch",
     "test": "mocha",
     "jshint": "jshint *.js"
@@ -28,5 +28,8 @@
     "mongoose": "^4.5.0",
     "ng-dialog": "^0.6.2",
     "npm-watch": ">=0.0"
+  },
+  "devDependencies": {
+    "angular-animate": "^1.5.7"
   }
 }
