--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gecko.js"
   ],
   "dependencies": {
+    "angular": "^1.5.7",
     "body-parser": "^1.15.1",
     "chai": ">=3.5",
     "express": ">1.0",
@@ -30,6 +31,8 @@
     "npm-watch": ">=0.0"
   },
   "devDependencies": {
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angular-route": "^1.5.7",
+    "ng-dialog": "^0.6.2"
   }
 }
