--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   ],
   "dependencies": {
     "angular": "^1.5.7",
+    "angular-animate": "^1.5.7",
+    "angular-route": "^1.5.7",
+    "angular-toastr": "node_modules/angular-toastr",
     "body-parser": "^1.15.1",
     "chai": ">=3.5",
     "express": ">1.0",
@@ -31,9 +34,5 @@
     "ng-dialog": "^0.6.2",
     "npm-watch": ">=0.0"
   },
-  "devDependencies": {
-    "angular-animate": "^1.5.7",
-    "angular-route": "^1.5.7",
-    "ng-dialog": "^0.6.2"
-  }
+  "devDependencies": {}
 }
