--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "less": "lessc ./public/assets/css/styles.less ./public/assets/css/styles.css",
+    "less": "lessc ./public/assets/css/index.less ./public/assets/css/index.css",
     "watch": "npm-watch",
     "test": "mocha",
     "jshint": "jshint *.js"
@@ -28,10 +28,14 @@
     "angular-toastr": "node_modules/angular-toastr",
     "body-parser": "^1.15.1",
     "chai": ">=3.5",
+    "exif": "^0.6.0",
     "express": ">1.0",
     "moment": "^2.14.1",
     "mongoose": "^4.5.0",
+    "multer": "^1.2.0",
     "ng-dialog": "^0.6.2",
+    "ng-file-upload": "^12.0.4",
+    "ng-flow": "^2.1.4",
     "npm-watch": ">=0.0"
   },
   "devDependencies": {}
