--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch": "npm-watch",
     "test": "mocha",
     "jshint": "jshint *.js",
-		"reset-db": "node app/tools/import-database.js"
+    "reset-db": "node app/tools/import-database.js"
   },
   "files": [
     "gecko.js"
@@ -25,6 +25,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "angular-animate": "^1.5.7",
+    "angular-modal-service": "^0.10.1",
     "angular-route": "^1.5.7",
     "angular-toastr": "node_modules/angular-toastr",
     "body-parser": "^1.15.1",
