--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "angular-animate": "^1.5.7",
     "angular-modal-service": "^0.10.1",
     "angular-route": "^1.5.7",
-    "angular-toastr": "node_modules/angular-toastr",
+    "angular-toastr": "^2.1.1",
     "body-parser": "^1.15.1",
     "chai": ">=3.5",
     "exif": "^0.6.0",
