--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": ">=3.5",
     "exif": "^0.6.0",
     "express": ">1.0",
+    "jquery": "^3.1.1",
     "moment": "^2.14.1",
     "mongoose": "^4.5.0",
     "multer": "^1.2.0",
